<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.coralblocks</groupId>
  <artifactId>coralring</artifactId>
  <version>1.12.2</version>

  <properties>
    <maven.compiler.source>16</maven.compiler.source>
    <maven.compiler.target>16</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jdk.add.opens />
    <jdk.add.exports />
  </properties>

  <scm>
    <connection>scm:git:https://coralblocks@github.com/coralblocks/CoralRing</connection>
    <developerConnection>scm:git:https://coralblocks@github.com/coralblocks/CoralRing</developerConnection>
    <url>https://coralblocks@github.com/coralblocks/CoralRing</url>
    <tag>1.12.2</tag>
  </scm>

  <dependencies>
	  
    <dependency>
      <groupId>net.java.dev.jna</groupId>
      <artifactId>jna</artifactId>
      <version>5.14.0</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
    
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>4.11.0</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <plugins>
     <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.2</version>
          <configuration>
              <argLine>${jdk.add.opens}</argLine>
          </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
          <fork>true</fork>
          <compilerArgs>
            <arg>${jdk.add.exports}</arg>
            <arg>-Xlint:-options</arg>
            <arg>-XDignore.symbol.file</arg>
          </compilerArgs>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <archive>
            <index>true</index>
            <manifest>
              <addClasspath>true</addClasspath>
            </manifest>
          </archive>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.11.1</version>
          <configuration>
              <additionalJOptions>
                <additionalJOption>${jdk.add.exports}</additionalJOption>
              </additionalJOptions>
              <doclint>all,-missing</doclint>
          </configuration>        
        <executions>
          <execution>
            <id>attach-javadoc</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <tagNameFormat>@{project.version}</tagNameFormat>
          <autoVersionSubmodules>true</autoVersionSubmodules>
          <releaseProfiles>release</releaseProfiles>
          <pushChanges>true</pushChanges>
          <remoteTagging>true</remoteTagging>
          <scmCommentPrefix>[maven-release-plugin]</scmCommentPrefix>
          <preparationGoals>clean verify</preparationGoals>
          <arguments>-DskipTests</arguments>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
          <phase>package</phase>
          <goals>
            <goal>shade</goal>
          </goals>
          <configuration>
            <minimizeJar>false</minimizeJar>  
            <finalName>coralring-all</finalName>
            <shadedArtifactAttached>true</shadedArtifactAttached>
            <shadedClassifierName>all</shadedClassifierName>
          </configuration>
        </execution>
      </executions>
      </plugin>

    </plugins>
  </build>

  <distributionManagement>
    <repository>
      <id>github-cb</id>
      <name>GitHub Apache Maven Packages</name>
      <url>https://maven.pkg.github.com/coralblocks/CoralRing</url>
      <layout>default</layout>
    </repository>
  </distributionManagement>

  <profiles>
    <profile>
      <id>java11plus</id>
      <activation>
         <jdk>[11,)</jdk>
          <!-- property>
              <name>java.specification.version</name>
              <regex>(1[1-9]|[2-9][0-9])(\..*)?</regex>
          </property -->
      </activation>
      <properties>
          <jdk.add.opens>--add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED</jdk.add.opens>
          <jdk.add.exports>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</jdk.add.exports>
      </properties>
  </profile>

  <!-- Profile for Java 8 -->
  <profile>
      <id>java8</id>
      <activation>
        <jdk>1.8</jdk>
          <!-- property>
              <name>java.specification.version</name>
              <value>1.8</value>
          </property -->
      </activation>
      <!-- No additional JVM arguments needed -->
  </profile>

  <profile>
    <id>release</id>
    <build>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.2.1</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.11.1</version>
          <configuration>
              <doclint>all,-missing</doclint>
          </configuration>
          <executions>
            <execution>
              <id>attach-javadoc</id>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>3.0.0</version>
          <configuration>
            <tagNameFormat>v@{project.version}</tagNameFormat>
            <autoVersionSubmodules>true</autoVersionSubmodules>
            <releaseProfiles>release</releaseProfiles>
          </configuration>
        </plugin>
      </plugins>
    </build>
  </profile>
  </profiles>
</project>
